--- a/package.json
+++ b/package.json
@@ -1,29 +1,43 @@
 {
   "name": "laravel-vue-s2n-easyforms",
-  "description": "Front end npm package for the laravel package Second2None EasyForms",
-  "repository": "https://github.com/second-2None/laravel-vue-s2n-easyforms.git",
-  "bugs": "https://github.com/tushargugnani/vue-hello-world-simple/issues",
   "version": "0.0.1",
   "private": true,
+  "description": "Front end npm package for the laravel package Second2None EasyForms",
   "author": {
-    "name": "Tushar Gugnani",
-    "email": "tushar@5balloons.info"
+    "name": "Kane Grills",
+    "email": "kane@plustime.com.au"
   },
-  "license": "MIT",
-  "files": ["dist"],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build-library": "vue-cli-service build --target lib --name laravel-vue-s2n-easyforms ./src/install.js",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-library": "vue-cli-service build --target lib --name laravel-vue-s2n-easyforms ./src/install.js --fix"
   },
-  "main" : ".dist/laravel-vue-s2n-easyforms.common.js",
+  "main": ".dist/laravel-vue-s2n-easyforms.common.js",
+  "keywords": ["second2none", "Kane Grills", "PlusTime IT" , "laravel forms" , "laravel" , "vue"],
+  "files": [
+    "dist"
+  ],
+  "dependencies": {
+    "eslint": "^7.18.0",
+    "vee-validate": "^3.4.5",
+    "vue": "^2.6.12",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify": "^2.4.3",
+    "vuex": "^3.6.2"
+  },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0"
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^6.2.2",
+    "prettier": "^1.19.1"
   },
-  "dependencies": {
-    "eslint": "^7.18.0"
-  }
+  "bugs": "https://github.com/second-2None/laravel-vue-s2n-easyforms/issues",
+  "license": "MIT",
+  "repository": "https://github.com/second-2None/laravel-vue-s2n-easyforms.git"
 }
