--- a/package.json
+++ b/package.json
@@ -13,20 +13,26 @@
     "build-library": "vue-cli-service build --target lib --name laravel-vue-s2n-easyforms ./src/install.js --fix"
   },
   "main": ".dist/laravel-vue-s2n-easyforms.common.js",
-  "keywords": ["second2none", "Kane Grills", "PlusTime IT" , "laravel forms" , "laravel" , "vue"],
+  "keywords": [
+    "second2none",
+    "Kane Grills",
+    "PlusTime IT",
+    "laravel forms",
+    "laravel",
+    "vue"
+  ],
   "files": [
     "dist"
   ],
   "dependencies": {
     "axios": "^0.21.1",
+    "cross-env": "^7.0",
     "eslint": "^7.18.0",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.12",
     "vue-template-compiler": "^2.6.12",
     "vuetify": "^2.4.3",
-    "vuex": "^3.6.2",
-    "cross-env": "^7.0",
-    "webpack": "^5.19.0"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
