--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "laravel-vue-s2n-easyforms",
+  "name": "laravel-vue-easyforms",
   "version": "0.0.10",
-  "description": "Front end npm package for the laravel package Second2None EasyForms",
+  "description": "Front end npm package for the Laravel EasyForms package",
   "author": {
     "name": "Kane Grills",
     "email": "kane@plustime.com.au"
@@ -10,11 +10,10 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "build-library": "vue-cli-service build --target lib --name laravel-vue-s2n-easyforms ./src/install.js --fix"
+    "build-library": "vue-cli-service build --target lib --name laravel-vue-easyforms ./src/install.js --fix"
   },
-  "main": ".dist/laravel-vue-s2n-easyforms.common.js",
+  "main": ".dist/laravel-vue-easyforms.common.js",
   "keywords": [
-    "second2none",
     "Kane Grills",
     "PlusTime IT",
     "laravel forms",
@@ -46,7 +45,7 @@
     "vuetify-loader": "^1.3.0",
     "vue": "^2.6.12"
   },
-  "bugs": "https://github.com/PlusTimeIT/laravel-vue-s2n-easyforms/issues",
+  "bugs": "https://github.com/PlusTimeIT/Laravel-Vue-EasyForms/issues",
   "license": "MIT",
-  "repository": "https://github.com/PlusTimeIT/laravel-vue-s2n-easyforms.git"
+  "repository": "https://github.com/PlusTimeIT/Laravel-Vue-EasyForms.git"
 }
