--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "laravel-vue-easyforms",
-  "version": "0.0.12",
+  "version": "0.0.14",
   "description": "Front end npm package for the Laravel EasyForms package",
   "author": {
-    "name": "Kane Grills",
-    "email": "kane@plustime.com.au"
+    "name": "PlusTimeIT",
+    "email": "kane@plustime.com.au" ,
+    "url" : "https://plustime.com.au/"
   },
+  "contributors": [
+    { "name" : "LionEagleSolutions", 
+      "email" : "james@lioneagle.solutions", 
+      "url" : "https://lioneagle.solutions/"
+    }
+  ],  
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -14,8 +21,8 @@
   },
   "main": ".dist/laravel-vue-easyforms.common.js",
   "keywords": [
-    "Kane Grills",
     "PlusTime IT",
+    "LionEagleSolutions",
     "laravel forms",
     "laravel",
     "vue"
