--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-vue-easyforms",
-  "version": "0.0.22",
+  "version": "0.0.23",
   "description": "Front end npm package for the Laravel EasyForms package",
   "author": {
     "name": "PlusTimeIT",
@@ -17,7 +17,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "build-library": "vue-cli-service build --target lib --name laravel-vue-easyforms ./src/install.js --fix"
+    "build-library": "vue-cli-service build --target lib --name laravel-vue-easyforms ./src/install.js"
   },
   "main": ".dist/laravel-vue-easyforms.common.js",
   "keywords": [
