--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-vue-easyforms",
-  "version": "0.0.62",
+  "version": "0.2.19",
   "description": "Front end npm package for the Laravel EasyForms package",
   "author": {
     "name": "PlusTimeIT",
@@ -16,11 +16,16 @@
   ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "bili --name index --plugin vue --vue.css false",
     "lint": "vue-cli-service lint",
-    "build-library": "vue-cli-service build --target lib --name laravel-vue-easyforms ./src/install.js --fix"
+    "build-library": "vue-cli-service build --target lib --name laravel-vue-easyforms ./src/index.js --inline-vue"
   },
   "main": "dist/laravel-vue-easyforms.common.js",
+  "module": "dist/laravel-vue-easyforms.esm.js",
+  "unpkg": "dist/laravel-vue-easyforms.min.js",
+  "browser": {
+    "./sfc": "src/components/forms/FormLoader.vue"
+  },
   "keywords": [
     "PlusTime IT",
     "LionEagleSolutions",
@@ -35,25 +40,27 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cross-env": "^7.0",
-    "eslint": "^7.18.0",
     "moment-timezone": "^0.5.33",
+    "sass": "^1.49.8",
+    "sass-loader": "^12.6.0",
     "vee-validate": "^3.4.5",
-    "vue-template-compiler": "^2.6.12",
     "vuetify": "^2.4.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "^4.5.11",
-    "@vue/cli-service": "~4.5.0",
+    "@babel/eslint-parser": "^7.5.4",
+    "@vue/cli-plugin-babel": "^5.0.1",
+    "@vue/cli-plugin-eslint": "^5.0.1",
+    "@vue/cli-service": "^5.0.1",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^8.10.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^8.5.0",
     "prettier": "^1.19.1",
+    "rollup-plugin-vue": "^6.0.0",
     "vue": "^2.6.12",
-    "vuetify-loader": "^1.3.0"
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.3"
   },
   "bugs": "https://github.com/PlusTimeIT/Laravel-Vue-EasyForms/issues",
   "license": "MIT",
