--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "moment-timezone": "^0.5.33",
     "sass": "^1.49.8",
     "vee-validate": "^3.4.5",
+    "vue-async-computed": "^3.9.0",
     "vuetify": "^2.4.3",
     "vuex": "^3.6.2"
   },
@@ -54,12 +55,12 @@
     "@vue/cli-plugin-eslint": "^5.0.1",
     "@vue/cli-service": "^5.0.1",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "sass-loader": "^12.6.0",
     "eslint": "^8.10.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^8.5.0",
     "prettier": "^1.19.1",
     "rollup-plugin-vue": "^6.0.0",
+    "sass-loader": "^12.6.0",
     "vue": "^2.6.12",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.3",
