--- a/package.json
+++ b/package.json
@@ -15,14 +15,20 @@
     }
   ],
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "bili --name index --plugin vue --vue.css false",
-    "lint": "vue-cli-service lint",
-    "build-library": "vue-cli-service build --target lib --name laravel-vue-easyforms ./src/main.js --inline-vue --fix"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "main": "dist/laravel-vue-easyforms.common.js",
-  "module": "dist/laravel-vue-easyforms.esm.js",
+  "module": "dist/laravel-vue-easyforms.es.js",
   "unpkg": "dist/laravel-vue-easyforms.min.js",
+  "exports": {
+    ".": {
+      "import": "./dist/laravel-vue-easyforms.es.js",
+      "require": "./dist/laravel-vue-easyforms.common.js"
+    }
+  },
   "browser": {
     "./sfc": "src/components/forms/FormLoader.vue"
   },
@@ -44,27 +50,23 @@
     "cross-env": "^7.0",
     "moment-timezone": "^0.5.33",
     "sass": "^1.49.8",
+    "unplugin-vue-components": "^0.24.1",
     "vee-validate": "^3.4.5",
     "vue-async-computed": "^3.9.0",
     "vuetify": "^2.4.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.5.4",
-    "@vue/cli-plugin-babel": "^5.0.1",
-    "@vue/cli-plugin-eslint": "^5.0.1",
-    "@vue/cli-service": "^5.0.1",
-    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vitejs/plugin-vue2": "^2.2.0",
     "eslint": "^8.10.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^8.5.0",
     "prettier": "^1.19.1",
     "rollup-plugin-vue": "^6.0.0",
     "sass-loader": "^12.6.0",
+    "vite": "^4.3.8",
     "vue": "^2.6.12",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^1.7.3",
-    "webpack-node-externals": "^3.0.0"
+    "vuetify-loader": "^1.7.3"
   },
   "peerDependencies": {
     "vue": "^2.6.12"
