--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
+    "serve": "vite preview"
   },
   "main": "dist/laravel-vue-easyforms.common.js",
   "module": "dist/laravel-vue-easyforms.es.js",
@@ -66,7 +65,8 @@
     "sass-loader": "^12.6.0",
     "vite": "^4.3.8",
     "vue": "^2.6.12",
-    "vuetify-loader": "^1.7.3"
+    "vuetify-loader": "^1.7.3",
+    "webpack-node-externals": "^3.0.0"
   },
   "peerDependencies": {
     "vue": "^2.6.12"
