--- a/package.json
+++ b/package.json
@@ -6,20 +6,18 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && npm run type:build && npm run story:build",
-    "serve": "vite preview",
-    "files": "vue-tsc --listFiles",
-    "type:build": "vue-tsc --project tsconfig.build-types.json --declaration",
+    "build": "./.scripts/build.sh --non-interactive",
+    "build:vite": "rimraf dist && vite build",
+    "build:types": "vue-tsc --project tsconfig.build-types.json --declaration",
+    "build:story": "histoire build",
     "type:check": "vue-tsc --project tsconfig.build-types.json",
     "test": "vitest --ui",
-    "lint:report": "eslint . --ext .ts,.tsx,.vue",
-    "lint:fix": "eslint . --fix --ext .ts,.tsx,.vue",
-    "prettier": "prettier .",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/",
     "bench": "vitest bench",
     "coverage": "vitest run --coverage",
     "preview": "vite preview --outDir ./coverage",
     "story:dev": "histoire dev",
-    "story:build": "histoire build",
     "story:preview": "histoire preview"
   },
   "exports": {
