--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "maska": "^2.1.10",
-    "moment-timezone": "^0.5.33"
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "@histoire/plugin-vue": "^0.17.1",
