--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,20 @@
 {
     "cSpell.words": [
-        "autodocs",
-        "axios",
-        "composables",
-        "customisation",
-        "doesnt",
-        "Hexa",
-        "histoire",
-        "historie",
-        "Lvef",
-        "maska",
-        "nocheck",
-        "nodenext",
-        "testbademail",
-        "vuetify"
+      "autodocs",
+      "axios",
+      "composables",
+      "customisation",
+      "doesnt",
+      "Hexa",
+      "histoire",
+      "historie",
+      "laravel",
+      "Lvef",
+      "maska",
+      "nocheck",
+      "nodenext",
+      "testbademail",
+      "vuetify"
     ],
     "typescript.format.placeOpenBraceOnNewLineForControlBlocks": true,
     "typescript.format.placeOpenBraceOnNewLineForFunctions": true,
