--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
       "composables",
       "customisation",
       "doesnt",
+      "grecaptcha",
       "Hexa",
       "histoire",
       "historie",
@@ -13,6 +14,7 @@
       "maska",
       "nocheck",
       "nodenext",
+      "recaptcha",
       "testbademail",
       "vuetify"
     ],
