--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "axios": "^1.5.1",
     "maska": "^2.1.10",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "v3-recaptcha": "^0.0.9"
   },
   "devDependencies": {
     "@histoire/plugin-vue": "^0.17.1",
@@ -150,8 +151,5 @@
     "./types": {
       "import": "./dist/types.js"
     }
-  },
-  "stackblitz": {
-    "startCommand": "npm run story:dev"
   }
 }
